# mc-tools

./: .travis.yml  InstallationUsingPIPAndSETUPTOOLS.md  Makefile  ProjectHome.md  README.md  env.sh  justAtest  mctal2root.md  mctools.py  setup.py
.github/workflows/: codeql-analysis.yml
common/: ascii2gr.py  ascii2th1.py  ascii2th3.py  ascii2tree.py  fractions.py  h2ascii.py  mixtures.py
fluka/: fluka.py  usxsuw2txt.py
mc_tools/: __init__.py
mc_tools/common/: __init__.py  mixtures.py
mc_tools/fluka/: __init__.py  fluka.py
mc_tools/mcnp/: __init__.py  configure.ac  mcplotkeys.sh  mctal2root.py  mctaltest.py  ssw2root.py
mcnp/: AUTHORS  ChangeLog  Makefile.am  conversiontest.sh  ilconte.py  mcnp-source.py  mcnp.py  mctal.py  mctal2root-noaxes.py  mctal2root.py  nbmctal2root.py  readmctal.py  roottestsuite.py  ssw.py  ssw2root.py  ssw2txt.py  testsuite.py
mcnp/nbmctal/: Makefile  conversiontest  loop_convert  loop_test  mctal2root.ctl  nbmctal.py  nbmctal2root.py  nbmctaltest.py  nbroottest.py  nbroottestsuite.py  nbtestsuite.py
mctools/: __init__.py  mctools.py
mctools/cinder/: CMakeLists.txt  Globals.hh  LinkDef.h  Makefile  Nuclide.cc  Nuclide.hh  README  TNuclide.cxx  TNuclide.h  TTable.cxx  TTable.h  Table.cc  Table.hh  alltabs.hh  alltabs.py  alltabs2ttree.cc  alltabs2ttree.cxx  alltabsDict.cc  alltabsDict.h  alltabsReader.cc  cinder2root.py  drawActivity.C  drawActivity3D.C  drawActivityVsTime.C  loadTable.C
mctools/cinder/examples/: drawActivityVsTime.C  loadTable.C
mctools/cinder/include/: LinkDef.h  TNuclide.h  TTable.h
mctools/cinder/src/: TNuclide.cxx  TTable.cxx  alltabs2ttree.cxx
mctools/common/: DynamicSlice.py  __init__.py  ace2root.py  ascii2gr.py  ascii2th1.py  ascii2th3.py  ascii2tree.py  average.py  gitlog2latex.py  h2ascii.py  h2pgf.py  hadd-max.py  hadd_av.py  lambdabins.py  line-distance.py  lsroot.py  mixtures.py  plot1d.py  plot2d.py  root2pgf.py  root2txt.py  scale.py  scale_hist.py  vtk2root.py
mctools/fluka/: __init__.py  detsuw2root.py  eventbin2root.py  eventdat2root.py  f2r.py  fluka-add-card.py  fluka-geocheck.py  fluka-mode.el  fluka-spawn.sh  fluka-stats.py  fluka.py  fluka.stop  fluka2root.py  mc-tools-fluka-merge.sh  mesh.py  plotgeom2root.py  rfluka.stop  sigma.py  stats.py  usbsuw2root.py  usbsuw2txt.py  usrbin2root.py  usrsuw2root.py  ustsuw2root.py  usxsuw2root.py  usxsuw2txt.py  usysuw2root.py
mctools/mcnp/: __init__.py  fix-mctal.sh  geocheck.sh  mcnp.py  mcnp_source.py  mcnpgen-mode.el  mcnpview.sh  mcplotkeys.py  mctal.py  mctal2root.ctl  mctal2root.py  mctal2txt.py  mctaltest.py  roottest.py  roottestsuite.py  ssw.py  ssw2root.py  ssw2txt.py  testsuite.py  vol.py  zoom.py  zoom.sh
mctools/phits/: __init__.py  angel2root.py  mcnp2phits.py  phits-mode.el  phits-run.sh  phits.py  rotate3dshow.py  submit.py  wwinp2phits.py
phits/: angel2root.py  animate-3dshow.py  phits-mode.el  phits-set-n.sh  phits.py  phits2root.py  rotate3dshow.py  strip-comments.py  submit.py  wwinp2phits.py
tags/easyinstall/: mctools.py  setup.py
tags/v1.0/: env.sh
tags/v1.0/mcnp/: Makefile.am  mcnp.py  ssw.py
tests/: Makefile  basic_test.py  draw.C  dummy_test.py  shield.inp
tests/fluka/: Makefile  draw.C  test.inp  test.py
tests/hplot/: test.py
tests/mcnp/: Makefile  (+2 more)
trunk/: env.sh  mctools.py
trunk/mcnp/: Makefile.am  ilconte.py  mcnp-source.py  mcnp.py  mctal.py  mctal2root.ctl  mctal2root.ctl.local  mctal2root.py  mctaltest.py  nbmctal2root.py  nbroottestsuite.py  readmctal.py  roottest.py  ssw.py  ssw2root.py
trunk/mcnp/nbmctal/: Doxyfile  loop_convert  loop_test  nbmctal.py  nbmctal2root.py  nbmctaltest.py  nbroottest.py  nbroottestsuite.py  nbtestsuite.py
wiki/: InstallationUsingPIPAndSETUPTOOLS.wiki  MCNP.wiki  mctal2root.wiki
(+121 files in other folders)
